fix(docs): hide desktop TOC on mobile

--- a/server/assets/docs/css/layouts/root.css
+++ b/server/assets/docs/css/layouts/root.css
@@ -177,6 +177,10 @@
       display: none;
     }
 
+    & #docs-toc {
+      display: none;
+    }
+
     & #docs-sidebar[data-mobile-open] {
       display: flex;
       position: fixed;
